--- a/web/css/index.css
+++ b/web/css/index.css
@@ -174,6 +174,9 @@ input:-ms-input-placeholder,textarea:-ms-input-placeholder {
 .ic-profile:before {
 	content:"\e90d";
 }
+.ic-avatar:before {
+	content:"\e90f";
+}
 .ic-exit:before {
 	content:"\e90e";
 }
